# DroneAutoAim

./: CMakeLists.txt  main.cpp
extra_files/camera_calibration_parameter/: extrinsics.yml  intrinsics.yml
extra_files/cmake_modules/: FindBLAS.cmake  FindCholmod.cmake  FindEigen3.cmake  FindG2O.cmake  FindQGLViewer.cmake  FindSuiteSparse.cmake
include/: config.h
include/armor_finder/: armor_finder.h  constant.h  param_struct_define.h
include/camera/: camera_api.h  camera_define.h  camera_status.h  camera_wrapper.h  video_wrapper.h  wrapper_head.h
include/classifier/: classifier.h
include/serial/: serial.h
include/tracker/: ffttools.hpp  fhog.hpp  kcftracker.hpp  recttools.hpp  tracker.h
include/uart/: uart.h
src/armor_finder/: armor_finder.cpp  armor_finder_main_stream.cpp  show_images.cpp
src/armor_finder/IspPipline/: isp_pipline.cpp
src/armor_finder/calibrate_source/: calibrate.cpp
src/armor_finder/state_machine/: searching_target.cpp  tracking_target.cpp  transfer_state.cpp
src/armor_finder/target_detection/: find_light_blob.cpp  match_light_blob.cpp
src/armor_finder/target_position/: predict_armor_position.cpp  target_stream_control.cpp
src/armor_finder/target_send_data/: send_target_by_uart.cpp
src/armor_finder/target_tracking/: armor_track.cpp
src/camera/: camera_wrapper.cpp  video_wrapper.cpp
src/classifier/: classifier.cpp
src/serial/: serial.cpp
src/tools/: calibrate_tool.cpp
src/tracker/: fhog.cpp  kcftracker.cpp
src/uart/: uart.cpp
